--- a/src/views/About.css
+++ b/src/views/About.css
@@ -3,13 +3,15 @@
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 0px;
-   grid-row-gap: 0px;
+   grid-row-gap: 0px;  font-family: "Space Grotesk", sans-serif;
+
    }
    
    .div1-about { 
       padding-left:3rem ;
       padding-top: 3rem;
-      font-size: 4rem;
+      font-size: 4rem;  font-family: "Space Grotesk", sans-serif;
+
       grid-area: 1 / 1 / 3 / 4; }
    .div2-about {
       padding-left:3rem ;
@@ -21,7 +23,9 @@
        background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
-       margin: 1rem;
+       margin: 1rem; 
+      font-family: "Space Grotesk", sans-serif;
+
        border-radius: 30px;
        grid-area: 1 / 4 / 6 / 6; }
 
