--- a/src/views/About.css
+++ b/src/views/About.css
@@ -15,8 +15,8 @@
       grid-area: 1 / 1 / 3 / 4; }
    .div2-about {
       padding-left:3rem ;
-      padding-top: 3rem;
-      font-size: 1rem;
+      padding-top: 1rem;
+      font-size: 24;
       grid-area: 3 / 1 / 6 / 4; }
    .div3-about {
        background-image: url(https://miro.medium.com/v2/resize:fit:828/format:webp/0*wHSt0i73KXGOQ8qw.jpg);
