--- a/src/components/DemoAlgo/DemoAlgo.css
+++ b/src/components/DemoAlgo/DemoAlgo.css
@@ -34,7 +34,7 @@
    border-radius: 0 0 0 2.8rem;
    margin: 10px;
    background-size: cover;
-   background-image: url(https://camo.githubusercontent.com/38b140bd351bb9dcc68ae83d81f19f775f320e6bca0924ba347e1079ea6f2658/68747470733a2f2f63646e612e61727473746174696f6e2e636f6d2f702f6173736574732f696d616765732f696d616765732f3033352f3639332f3635362f6f726967696e616c2f6777796e6574682d62616c7563696f2d68656c6c6f2d776f726c642e6769663f31363135363432383737);
+   background-image: url(https://i.ibb.co/tKdLYqB/image.jpg);
    background-position: center;
    background-repeat: no-repeat;
    grid-area: 2 / 1 / 5 / 4;
@@ -71,7 +71,7 @@
    border-radius: 0 0 2.8rem 0;
    margin: 10px;
    grid-area: 2 / 5 / 5 / 6;
-   background-image: url(https://cryptotrekking.com/wp-content/uploads/2023/07/consensus_of_blockchain_network_focus_on_consensu_c5ff3073-ba21-4ec3-a53a-382f8668d588-e1688646519915.jpg);
+   background-image: url(https://i.ibb.co/QdRDQJ3/Binary-code-background-stock-photo-Image-of-computer-18787760.jpg);
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
