--- a/src/views/About.css
+++ b/src/views/About.css
@@ -28,19 +28,21 @@
    @media (max-width: 900px) {
       .div1-about { 
          padding: 2.5rem 1rem 1rem 1rem;
-         grid-area: 1 / 1 / 3 / 6; }
+         grid-area: 1 / 1 / 3 / 6;
+         
+      }
       .div2-about { padding: 1rem 1rem 2rem 1rem;grid-area: 3 / 1 / 6 / 6; }
       .div3-about { grid-area: 1 / 6/ 6 / 6; }
  }
 
- @media (max-width: 500px) {
+ @media (max-width: 450px) {
    .div1-about { 
       font-size: 2.3rem;
+      grid-area: 1 / 1 / 2 / 6;
       padding: 2.5rem 1rem 0.5rem 1rem;
-
    }
    .div2-about { 
       padding: 0 1rem 2rem 1rem;
       grid-area: 3 / 1 / 6 / 6; }
-   .div3-about { display: none; }
+   .div3-about { grid-area: 2 / 1 / 3 / 6; }
 }
